# ray-tracer-challenge-python

./: .flake8  .gitignore  .pylintrc  LICENSE.txt  README.md  cspell.json  pyproject.toml
exercise/: chapter01.py  chapter02.py  chapter03.py
pyray/: __init__.py  canvas.py  color.py  colors.py  math.py  matrix.py  raymath.py  tuples.py
tests/: test_canvas.py  test_color.py  test_matrix.py  test_tuples.py
